<resources>
    <string name="app_name">Radcook </string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_menu_inferior">NavMenuInferior</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


        <string name="profile_image">Descripción de la imagen de perfil</string>
        <string name="change_profile_picture">Cambiar imagen de perfil</string>
        <string name="enter_name">Ingresa tu nombre</string>
        <string name="enter_email">Ingresa tu correo electrónico</string>
        <string name="enter_phone">Ingresa tu número de teléfono</string>


</resources>