<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/perfil"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profile_image"/>

    <Button
        android:id="@+id/buttonChangeProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_picture"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#009846"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:fontFamily="@font/poppins_semibold"
        android:padding="8dp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:fontFamily="@font/poppins_semibold"
        android:padding="8dp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/enter_phone"
        android:fontFamily="@font/poppins_semibold"
        android:padding="8dp"
        android:layout_margin="16dp"/>




    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Actualizar Datos"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#009846"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="24dp"/>

</LinearLayout>
